# fila_com_redis

./: database.db  pyproject.toml
redis_fila/: main.py
