[tool.poetry]
name = "redis-fila"
version = "0.1.0"
description = ""
authors = ["Romario lima <romariolima1006@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
redis = "^5.1.1"
fastapi = "^0.115.3"
uvicorn = "^0.32.0"
sqlalchemy = "^2.0.36"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
